# simpler-filehost

./: .gitattributes  .gitignore  Cargo.nix  Cargo.toml  README  flake.nix  rust-toolchain
src/: main.rs
templates/: index.html.hbs
